@@ -4,7 +4,8 @@
             UpgradeCode='af7b4234-60c2-4fea-9b43-8c6b2deaed6e'
             Language='1033' Codepage='1252' Version='$(var.VERSION)'>
         <Package Keywords='Installer' Description='RSuite CLI Installer' Manufacturer='WLOG Solutions'
-            InstallerVersion='200' Languages='1033' Compressed='yes' SummaryCodepage='1252' />
+            InstallerVersion='200' Languages='1033' Compressed='yes' SummaryCodepage='1252'
+			InstallPrivileges='limited' InstallScope='perUser'/>
 
         <Media Id='1' Cabinet='RSuite.cab' EmbedCab='yes' DiskPrompt='CD-ROM #1' />
         <Property Id='DiskPrompt' Value='RSuite CLI Installation [1]' />
@@ -33,15 +34,28 @@
             <Directory Id='ProgramMenuFolder' Name='Programs' />
         </Directory>
 
+		<Property Id="SYSTEMENVIRONMENT" Value="yes" />
+		
         <DirectoryRef Id='APPLICATIONFOLDER'>
             <Component Id='MainCMD' Guid='927416cf-eaa6-4152-b3bc-b039c2d50103'>
                 <File Id='RSuiteCMD' Name='rsuite.cmd' DiskId='1' Source='../rsuite.cmd' KeyPath='yes' />
                 <File Id='RSuiteBash' Name='rsuite' DiskId='1' Source='../rsuite' />
                 <File Id='zip.exe' Name='zip.exe' DiskId='1' Source='zip.exe' />
-                <File Id='version.txt' Name='version.txt' DiskId='1' Source='build/version.txt' />
-                <Environment Id="PATH" Name="PATH" Value="[APPLICATIONFOLDER]" Permanent="no" Part="first" Action="set" System="yes" />
+				<File Id='version.txt' Name='version.txt' DiskId='1' Source='build/version.txt' />
             </Component>
+			
+			<Component Id='AddPathPerMachine' Guid='9af25a01-e6d5-40a7-a004-a2b6d71d5025'>
+				<CreateFolder />
+				<Environment Id="PATHPerMachine" Name="PATH" Value="[APPLICATIONFOLDER]" Permanent="no" Part="first" Action="set" System="yes" />
+				<Condition>ALLUSERS = 1</Condition>
+			</Component>
+			<Component Id='AddPathPerUser' Guid='d53bc950-ffa3-4a22-be76-baefe140f5ba'>
+				<CreateFolder />
+				<Environment Id="PATHPerUser" Name="PATH" Value="[APPLICATIONFOLDER]" Permanent="no" Part="first" Action="set" System="no" />
+				<Condition><![CDATA[ALLUSERS<>1]]></Condition>
+			</Component>
 
+			
             <Directory Id='RSources' Name='R'>
                 <Component Id='RSources' Guid='31197745-41cb-4323-9f3e-ccfdc7a5d2f7'>
                     <File Id='command_mgr.R' Name='command_mgr.R' DiskId='1' Source='../R/command_mgr.R' KeyPath='yes' />
@@ -96,6 +110,8 @@
 
         <Feature Id='Complete' Level='1' Title='Complete installation'>
             <ComponentRef Id='MainCMD' />
+			<ComponentRef Id='AddPathPerMachine' />
+			<ComponentRef Id='AddPathPerUser' />
             <ComponentRef Id='RSources' />
             <ComponentRef Id='RRepo' />
             <ComponentRef Id='RSuiteCLIDoc' />
