@@ -321,7 +321,7 @@ vers.rm_acceptable <- function(ver, pkgs) {
 vers.rm_base <- function(ver) {
   stopifnot(is.versions(ver))
 
-  base_pkgs <- utils::installed.packages(lib.loc = .Library, priority = "base")[, "Package"]
+  base_pkgs <- utils::installed.packages(lib.loc = c(.Library.site, .Library), priority = "base")[, "Package"]
   vers.rm(ver, c(base_pkgs, "R"))
 }
 
