@@ -3,6 +3,8 @@ VERSION 0.25 (2018-04-??)
      package. Got rid of dependency to rstudioapi.
   * Removed dependency to knitr and rmarkdown. They should be installed as
      supportive packages.
+  * On Linux properly detecting if supportive packages are available. They can
+     be present under .Library.site but not under .Library.
 
 VERSION 0.24 (2018-04-18)
   * .Rprofile loads environment throu set_env.R not to load RSuite before
