@@ -1,5 +1,6 @@
 VERSION 0.25 (2018-04-??)
   * install command apdated to install RSuiteRStudio add-in.
+  * main windows script adapted to detect non global R installation.
 
 VERSION 0.24 (2018-04-18)
   * docker command has new parameter -i (--image) which makes it possible
